RTC#307205 Fix automation build
Introduce a top-level script to guide automation system
to create release packages for each tool.

- Supports both Windows and Linux.
- Moves Pipfiles to top level as well.

TEST=Integrate it in automation system to verify if outputs
     are correct

Signed-off-by: Jin, Huang <huang.jin@intel.com>

--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,12 @@ pypandoc = "*"
 pytest-cov = "*"
 pytest-html = "*"
 pytest = "==5.0.1"
+bandit = "*"
+pylint = "*"
 
 [packages]
 cryptography = "*"
+click = "*"
 
 [requires]
 python_version = "3.7"
