RTC#319955 support python 3.6.8 for SIIP scripts
Add python 3.6.8 support as it is widely used in Intel

- Update Pipfile to run environment 3.6
- Update document

TEST=Run unittest with py3.6.8/3.7.x on both Windows and Linux

Signed-off-by: Kdbarnes <kimberly.d.barnes@intel.com>
Signed-off-by: Jin, Huang <huang.jin@intel.com>

--- a/Pipfile
+++ b/Pipfile
@@ -4,21 +4,21 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+bandit = "*"
 flake8 = "*"
 black = "*"
-pypandoc = "*"
+pylint = "*"
 pytest-cov = "*"
 pytest-html = "*"
-pytest = "==5.0.1"
-bandit = "*"
-pylint = "*"
+pypandoc = "*"
 
 [packages]
-cryptography = "*"
 click = "*"
+cryptography = "*"
+pytest = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
 
 [pipenv]
 allow_prereleases = true
